[tool.poetry]
name = "wolt_assignment_2023-riikka-salojoki"
version = "0.0.1"
description = "Assignment for Wolt Engineering Summer Internship position."
authors = ["Riikka Salojoki"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
invoke = "^1.7.3"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
numpy = "^1.24.1"
httpx = "^0.23.3"
mypy = "^0.991"
flake8 = "^6.0.0"
black = "^22.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^7.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
